data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_813.wast
;; 4. **Branch to Nonexistent Label**:    Include a `br` instruction within a loop that targets a label index that does not exist, forcing the validation to check for accurate label indexing.    Constraint: Ensure the branch targets valid label indices within the loop context.    Expected: Detection of invalid label index leading to an error, indicating malformed loop structure.

(assert_invalid
  (module
    (func $branch-to-nonexistent-label
      (loop (result i32)
        (br 1)
        (i32.const 0)
      )
    )
  )
  "unknown label"
)